<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingEnd="10dp"
    android:paddingStart="10dp"
    android:paddingTop="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_shape"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_shape" />

        <Button
            android:id="@+id/btn_selector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_selector" />

        <Button
            android:id="@+id/btn_layer_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_layer_list" />

        <Button
            android:id="@+id/btn_animation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_animation" />

        <Button
            android:id="@+id/btn_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_style" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
